# ledger-app-neo3

./: .clang-format  LICENSE  Makefile  README.md  SETUP_ENVIRONMENT.md  cli.py  paging.py
.github/workflows/: ci-workflow.yml  lint-workflow.yml
doc/: COMMANDS.md  FUZZING.md
fuzzing/: CMakeLists.txt  build.sh  fuzz_neo3.c
src/: constants.h  crypto.c  crypto.h  main.c  shared_context.h  sw.h  types.h
src/apdu/: dispatcher.c  dispatcher.h
src/common/: base58.c  bip44.c  bip44.h  buffer.c  buffer.h  format.c  read.c  read.h
src/handler/: get_public_key.c  get_public_key.h  get_version.c  sign_tx.c  sign_tx.h
src/helper/: send_reponse.c  send_response.c  send_response.h
src/transaction/: deserialize.c  deserialize.h  serialize.c  tx_utils.c  tx_utils.h  types.h
src/ui/: display.c  display.h  menu.c  utils.c  utils.h
src/ui/action/: validate.c  validate.h
tests/: conftest.py  requirements.txt  test_appname_cmd.py  test_error_cmd.py  test_name_version.py  test_pubkey_cmd.py  test_sign_cmd.py  test_tx_deserialization.py  test_version_cmd.py
tests/boilerplate_client/: boilerplate_cmd.py  boilerplate_cmd_builder.py  utils.py
tests/boilerplate_client/exception/: __init__.py  device_exception.py  errors.py
unit-tests/: CMakeLists.txt  test_base58.c  test_read.c
